--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
         uses: actions/upload-artifact/merge@v4
         with:
           name: firmware-zmk-sweep
-          pattern: cradio_left_nice_nano_v2.uf2
+          pattern: *.uf2
 
       - name: West Build (Cradio/Sweep Right)
         run: west build --pristine -s zmk/app -b nice_nano_v2 -- -DSHIELD=cradio_right -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
@@ -66,4 +66,4 @@ jobs:
         uses: actions/upload-artifact/merge@v4
         with:
           name: firmware-zmk-sweep
-          pattern: cradio_right_nice_nano_v2.uf2
+          pattern: *.uf2
