--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -17,3 +17,5 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
 # Fixing bluetooth connection
 CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
+
+CONFIG_ZMK_KEYBOARD_NAME="tuup-roti"
