--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -8,7 +8,7 @@ CONFIG_ZMK_SLEEP=y
 # uses very little power, but it may take
 # a few seconds to reconnect after waking.
 # 1.800.000 ms = 30 minutes
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # "Eager Debouncing"
 # Trying to lower the input lag.
@@ -16,7 +16,8 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
 # Fixing bluetooth connection
-CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
+# CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
 
 CONFIG_ZMK_KEYBOARD_NAME="tuup-roti"
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
