--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -1,5 +1,5 @@
 # increase bluetooth signal power
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # enable deep sleep support
 CONFIG_ZMK_SLEEP=y
@@ -15,7 +15,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
-# Fixing bluetooth connection
+# reset all bluetooth pairing, hosts/other half, good for testing
 # CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
 
 CONFIG_ZMK_KEYBOARD_NAME="tuup-roti"
